config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-web
spec:
  rules:
  - host: local.l6p.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ui-web
            port:
              number: 80
